chapter6/service/sample-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-externalname
  namespece: default
spec:
  type: ExternalName
  externalName: external.example.com
